<resources>
    <string name="app_name">GoogleMapsTrial</string>
    <string name="title_activity_maps">Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
    <string name="custom">Custom</string>
    <string name="click">Long Clicked..</string>
</resources>